--- a/assets/juego.html
+++ b/assets/juego.html
@@ -29,6 +29,10 @@
              <p id="sello-count">sello: 0</p>
 
          </div>
+         <div class="apuesta" id="apuesta">
+            <input type="text" id="apues" placeholder="ingrese valor de la apuesta">
+        </div>
+
         <div class="buttons">
             <button id="flip-button">
                girar moneda
