--- a/assets/juego.html
+++ b/assets/juego.html
@@ -54,7 +54,7 @@
     </div>
 
     <script src="../juego.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </body>
 </html>
