--- a/assets/index.html
+++ b/assets/index.html
@@ -16,10 +16,10 @@
           <div class="contenedor"></div>
             <h1 class="text-capitalize">Juego cara o sello</h1>
             <p>¿deseas jugar?</p><br><br>
-            <a href="juego.html" class="bannerg-btn">JUGAR</a> </div>
+            <a id="ingresar" href="juego.html"><button class="bannerg-btn" >Ingresar</button></a>
+
         </div>
       </div>
-
     
 </body>
 </html>
